fix(deps): update dependency at.asitplus.signum:indispensable 3.25.0 to v3.26.0 (#636)
* fix(deps): update all dependencies

* exclude meta-inf/license

* robolectric fixes

---------

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Teo Baranga <139957+teobaranga@users.noreply.github.com>